# Real-Time-Edge-Detection-Viewer

./: settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/real_time_edge_detection_viewer/: MainActivity.kt
app/src/main/java/com/example/real_time_edge_detection_viewer/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
